# moris-lang

./: .gitignore  Cargo.toml  LICENSE.md  README.md  STATUS.md  build.rs
codegen/: Cargo.toml
codegen/src/: ast_nodes.rs  env.rs  function.rs  lib.rs  manager.rs  meta.rs  natives.rs  node.rs  quadruples.rs  symbols.rs
codegen/src/ast_nodes/: expressions.rs  grammar.lalrpop  grammar.rs  statements.rs  syntax.ebnf
docs/: book.toml
docs/src/: syntax.ebnf
examples/: array.mo  data_frame.mo  df.mo  expressions.mo  fibonacci.mo  fibonacci_memo.mo  find.mo  for_loop.mo  mat_mul.mo  multi_function.mo  natives.mo  pipe.mo  polars.mo  sort.mo  stats.mo  strings.mo
memory/: Cargo.toml
memory/src/: resolver.rs  types.rs
parser/: Cargo.toml
parser/src/: expressions.rs  functions.rs  grammar.lalrpop  grammar.rs  lib.rs  semantics.rs  statements.rs  types.rs
parser/src/expressions/: call.rs  constant.rs  id.rs  operation.rs
parser/tests/: test_parser.rs
samples/: array.mo  arrays.mo  df.mo  expressions.mo  fibonacci.mo  fibonacci_memo.mo  function.mo  multi_function.mo  natives.mo  pipe.mo  polars.mo  strings.mo  while.mo
src/: ast.rs  codegen.rs  env.rs  lib.rs  main.rs  memory.rs  plots.rs  semantics.rs  symbols.rs  syntax.rs  vm.rs
src/ast/: expressions.rs  functions.rs  node.rs  quadruples.rs  statements.rs  temp.rs  types.rs
src/ast/expressions/: call.rs  constant.rs  id.rs  operation.rs
src/codegen/: function.rs  manager.rs  meta.rs  quadruples.rs
src/grammar/: expressions.lalrpop  expressions.rs  grammar.lalrpop  grammar.rs
src/memory/: resolver.rs  types.rs  virtual_allocator.rs
src/parser/: grammar.lalrpop  grammar.rs
src/plots/: backend.rs  util.rs
src/vm/: inspector.rs  memory_manager.rs  natives.rs  runner.rs  test.rs  utils.rs  virtual_machine.rs
tests/: integration_tests.rs  test_expressions.rs  test_parser.rs
