[package]
name = "moris-lang"
version = "0.1.0"
edition = "2021"

build = "build.rs" # LALRPOP preprocessing

[dependencies]
codegen = { version = "0.1.0", path = "codegen" }
lalrpop-util = { version = "^0.19", features = ["lexer"] }
memory = { version = "0.1.0", path = "memory" }
parser = { version = "0.1.0", path = "parser" }
polars = "0.25.1"
regex = "1"
serde-pickle = "1.1.1"
serial_test = { version = "0.9.0", features = ["file_locks"]}
variantly = "0.2.0"

[build-dependencies]
lalrpop = "0.19.7"
