[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memory = { version = "0.1.0", path = "../memory" }
parser = { version = "0.1.0", path = "../parser" }
serde = "1.0.147"
serde-pickle = "1.1.1"
strum = { version = "0.24", features = ["derive"] }
